Closed
Bug 245911
Opened 21 years ago
Closed 21 years ago
L10n: missing strings about bookmarks toolbar icon in localizable.strings
Categories
(Camino Graveyard :: Toolbars & Menus, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino0.8
People
(Reporter: m.testi, Assigned: mikepinkerton)
Details
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:0.9.4.1) Gecko/2002 - Netscape 6.2, Mac OS X
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:0.9.4.1) Gecko/2002 - Netscape 6.2, Mac OS X
"Bookmarks" toolbar icon: in the localizable.strings file, there is the word
"Bookmark". Changing it to "Bookmarks" will allow translation.
"Manage Bookmarks" in the Customize toolbar sheet: the "Manage Bookmarks" string
is missing from the localizable.strings file. Just add it and it will allow l10n.
Reproducible: Always
Steps to Reproduce:
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Target Milestone: --- → Camino0.8
Comment 1•21 years ago
|
||
> "Bookmarks" toolbar icon: in the localizable.strings file, there is the word
> "Bookmark". Changing it to "Bookmarks" will allow translation.
Actually, both Bookmark and Bookmarks are used in the code--one for the button
to add a bookmark, and the other for the button to manage bookmarks. So
"Bookmarks = "Bookmarks"; need to be added, without changing Bookmark.
| Reporter | ||
Comment 2•21 years ago
|
||
(In reply to comment #1)
> Actually, both Bookmark and Bookmarks are used in the code--one for the button
> to add a bookmark, and the other for the button to manage bookmarks. So
> "Bookmarks = "Bookmarks"; need to be added, without changing Bookmark.
Actually, "Bookmark" as a verb is covered by "Add Bookmark". I can't see any use
in "Bookmark", but I've tried both substituting it and adding "Bookmarks" and
everything is OK, so I think we could leave "Bookmark" and add "Bookmarks" and
"Manage Bookmarks".
| Reporter | ||
Updated•21 years ago
|
Summary: L10n blocked from bad strings about bookmarks toolbar icon → L10n: missing strings about bookmarks toolbar icon in localizable.strings
| Reporter | ||
Comment 3•21 years ago
|
||
(In reply to comment #2)
> Actually, "Bookmark" as a verb is covered by "Add Bookmark".
Sorry. It's "Bookmark Page", not "Add Bookmark".
Comment 4•21 years ago
|
||
Bookmark Page is the title shown in the customization palette. Bookmark is the
label used as the text part of the actual toolbar item.
http://lxr.mozilla.org/mozilla/source/camino/src/browser/BrowserWindowController.mm#968
| Assignee | ||
Comment 5•21 years ago
|
||
as far as i can tell, the bookmark toolbar item is correctly localizable without
changes. The code looks for "Bookmark" and it's there in the localizable.strings
file. maybe it should have a better name or description?
| Assignee | ||
Comment 6•21 years ago
|
||
whoops, my bad, i was totally mistaken. Added a new key, "ToggleBookmarks" to
fix this.
| Assignee | ||
Comment 7•21 years ago
|
||
here's the change i committed to the bwc so you can see what i updated:
Index: src/browser/BrowserWindowController.mm
===================================================================
RCS file: /cvsroot/mozilla/camino/src/browser/BrowserWindowController.mm,v
retrieving revision 1.137
diff -u -2 -r1.137 BrowserWindowController.mm
--- src/browser/BrowserWindowController.mm 2 Jun 2004 02:42:37 -0000 1.137
+++ src/browser/BrowserWindowController.mm 9 Jun 2004 22:13:00 -0000
@@ -894,6 +894,6 @@
else if ( [itemIdent isEqual:SidebarToolbarItemIdentifier] )
{
- [toolbarItem setLabel:NSLocalizedString(@"Bookmarks", @"Bookmarks")];
- [toolbarItem setPaletteLabel:NSLocalizedString(@"Manage Bookmarks",
@"Manage Bookmarks")];
+ [toolbarItem setLabel:NSLocalizedString(@"ToggleBookmarks", @"Manage
Bookmarks label")];
+ [toolbarItem setPaletteLabel:NSLocalizedString(@"Manage Bookmarks",
@"Manage Bookmarks palette")];
[toolbarItem setToolTip:NSLocalizedString(@"BookmarkMgrToolTip", @"Show or
hide all bookmarks")];
[toolbarItem setImage:[NSImage imageNamed:@"manager"]];
| Assignee | ||
Comment 8•21 years ago
|
||
fixed on branch and trunk
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•