cleanup toolbar button strings making them easier to correctly localize (bug 245911)